# cheetah

./: .gitignore  README.md  pyproject.toml
ishe/: 12_34_02-918.csv  squash_ratings.py
paper_search/: paper_search.ipynb  paper_search.py
paper_search/samples/: Tiger_scopus_Kathi_13.1.25.csv  tiger_WoS_28.01.25_kathi.xls
playback/: count_behaviors.py  interobserver_reliability.py  join_with_plan.py  merge_annotations_with_metadata.py  merge_excels.py  old_notebook.ipynb  playback.ipynb  playback_analysis.py
playback/samples/: 01_01.10.2024.xlsx  01_02.10.2024.xlsx  01_04.10.2024.xlsx  with_id.xlsx
