[project]
name = "cheetah"
version = "0.1.0"
description = "A small collection of scripts for a lovely biologist"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.13.0",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "polars>=1.8.2",
    "pyarrow>=19.0.1",
    "pyqt6>=6.9.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
]

[tool.ruff]
line-length = 120
